# cmake-gtest-example

./: CMakeLists.txt  Example.cpp  Example.hpp  README.md
test/: CMakeLists.txt  ExampleTests.cpp
